Updated AUTHORS file for my version.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,5 @@
-See a list of contributors here
+See a list of all original arc-theme contributors here
 https://github.com/horst3180/Arc-theme/graphs/contributors
+
+arc-undead creator:
+Christian Dürr (aka UndeadLeech)
